activity detection added

--- a/web-socket/server/package.json
+++ b/web-socket/server/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ."
-    ,"dev": "nodemon ."
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.21.1",
     "socket.io": "^4.8.0"
   },
   "devDependencies": {
